[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/sprites/test/character_femaleAdventurer_walk4.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/test/character_femaleAdventurer_walk3.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/test/character_femaleAdventurer_walk1.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/test/character_femaleAdventurer_walk7.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/test/character_femaleAdventurer_walk2.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/test/character_femaleAdventurer_walk6.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/test/character_femaleAdventurer_walk5.png" type="Texture" id=7]
[ext_resource path="res://nodes/agents/agent.gd" type="Script" id=8]
[ext_resource path="res://nodes/agents/state_machines/processing/processing_state_machine.gd" type="Script" id=9]
[ext_resource path="res://nodes/agents/state_machines/processing/states/biological.gd" type="Script" id=10]
[ext_resource path="res://nodes/agents/meters.tscn" type="PackedScene" id=11]
[ext_resource path="res://nodes/agents/state_machines/task_queue/performing_task.tscn" type="PackedScene" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 128, 10 )

[sub_resource type="Animation" id=3]
resource_name = "walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1, 6 ]
}

[sub_resource type="GDScript" id=4]
script/source = "class_name PerformingTask
extends \"res://nodes/state_machine/state.gd\"

const MIN_RUNTIME = 5 #ms presumably

var _runtime: float = 0.0
onready var _task_queue = $TaskQueue


func enter():
    _runtime = 0.0

func exit():
    pass


func handle_input(_event):
    pass


func update(_delta):
    if _runtime < MIN_RUNTIME:
        _runtime = _runtime + _delta
        _task_queue.update(_delta)
    else:
        emit_signal('finished', 'biological')


func _on_animation_finished(_anim_name):
    pass
"

[node name="Agent" type="KinematicBody2D"]
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.52588e-05, 15.8919 )
scale = Vector2( 0.16, 4.6 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/walk = SubResource( 3 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 9 )

[node name="Biological" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="PerformingTask" parent="StateMachine" instance=ExtResource( 12 )]
script = SubResource( 4 )

[node name="Meters" parent="." instance=ExtResource( 11 )]
margin_left = -54.1056
margin_top = -69.1716
margin_right = 45.8944
margin_bottom = -33.1716

[node name="StateLabel" type="Label" parent="."]
margin_left = -22.6274
margin_top = 79.196
margin_right = 17.3726
margin_bottom = 93.196
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="state_changed" from="StateMachine" to="." method="_on_StateMachine_state_changed"]
